# EchoMind

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Chat.py  Dockerfile  Evaluation.py  EvaluatorAgent.py  Me.py  PushOver.py  README.md  Tools.py  alembic.ini  app.py  config.py  database.py  fly.toml  persona.yaml.example  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 612cc1581ccc_add_rate_limit_table.py  9d127d350d71_initial_schema_sessions_conversations_.py  b3dc51b73835_add_context_aware_cache_with_ttl.py
api/: dependencies.py  main.py
api/middleware/: auth.py  cors.py  postgres_storage.py  rate_limit.py  rate_limit_state.py
api/routes/: admin.py  chat.py  health.py
app/: EvaluatorAgent.py  README.md
core/: chat.py  interfaces.py  persona.py
core/llm/: __init__.py  factory.py  provider.py  types.py
core/llm/providers/: __init__.py  gemini.py  openai_compatible.py
docs/: CHANGELOG.md
models/: models.py  requests.py  responses.py
repositories/: cache_repo.py  connection.py  conversation_repo.py
services/: __init__.py  cache_service.py  conversation_logger.py  similarity_service.py
tests/: conftest.py  test_cache_repo.py  test_cache_service.py  test_chat.py  test_config.py  test_conversation_logger.py  test_conversation_repo.py  test_database.py  test_evaluator_agent.py  test_gemini_provider.py  test_llm_factory.py  test_me.py  test_openai_provider.py  test_pushover.py  test_similarity_service.py  test_tools.py
tests/api/: test_admin_rate_limit.py  test_rate_limit.py
