# PyProject Configuration for EchoMind
# Centralizes build system, dependencies, and tool configurations

# ============================================================================
# BUILD SYSTEM
# ============================================================================
# Build backend configuration per PEP 517/518
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

# ============================================================================
# PROJECT METADATA
# ============================================================================
# Package metadata per PEP 621
[project]
name = "echomind"
version = "2.3.1"  # Keep in sync with CHANGELOG.md
description = "Personal AI chatbot that represents your persona in conversations"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

authors = [
    {name = "Max Solomyanov", email = "max.solomyanov@gmail.com"}
]

# Search and discovery keywords
keywords = [
    "chatbot",
    "ai",
    "fastapi",
    "persona",
    "llm",
    "openai",
    "gemini"
]

# PyPI classifiers
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Communications :: Chat",
]

# Core runtime dependencies
# TODO: Migrate from requirements.txt
dependencies = []

# ============================================================================
# OPTIONAL DEPENDENCIES
# ============================================================================
# Development and testing dependencies
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

# ============================================================================
# TOOL CONFIGURATIONS
# ============================================================================

# ----------------------------------------------------------------------------
# PYTEST - Testing Framework
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
# Test discovery patterns
testpaths = ["tests"]                    # Look for tests in this directory
python_files = ["test_*.py"]             # Files starting with "test_"
python_classes = ["Test*"]               # Classes starting with "Test"
python_functions = ["test_*"]            # Functions starting with "test_"

# Test execution options
asyncio_mode = "auto"                    # Automatically detect async tests
asyncio_default_fixture_loop_scope = "function"  # Each test gets fresh event loop
addopts = [
    "-v",                                # Verbose output (show each test)
    "--strict-markers",                  # Error on unknown markers
    "--tb=short",                        # Shorter traceback format
    "--cov=.",                           # Measure coverage of current directory
    "--cov-report=term-missing",         # Show missing lines in terminal
    "--cov-report=html",                 # Generate HTML coverage report
    "--cov-fail-under=70",               # Fail if coverage below 70%
]

# Test markers for categorization
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (database, API)",
    "slow: Slow-running tests",
]

# Minimum Python version for tests
minversion = "8.0"

# ----------------------------------------------------------------------------
# RUFF - Linter & Formatter
# ----------------------------------------------------------------------------
[tool.ruff]
# Python version target
target-version = "py311"

# Line length limit
line-length = 100

# Files and directories to exclude from linting
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.pyc",
    ".pytest_cache",
    "htmlcov",
    "dist",
    "build",
    "*.egg-info",
    "alembic/versions",  # Database migration files
]

[tool.ruff.lint]
# Rule categories to enable
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes (unused imports, variables)
    "I",      # isort (import sorting)
    "N",      # pep8-naming (naming conventions)
    "UP",     # pyupgrade (modernize Python code)
    "B",      # flake8-bugbear (common bugs)
    "C4",     # flake8-comprehensions (list/dict comprehensions)
    "SIM",    # flake8-simplify (code simplification)
    "TCH",    # flake8-type-checking (type import optimization)
    "Q",      # flake8-quotes (consistent quotes)
]

# Rules to ignore
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Function call in argument defaults (FastAPI pattern)
    "UP007",  # Use X | Y for type annotations (prefer Optional[X])
]

# Allow unused variables when prefixed with underscore
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Test files can have longer lines and unused imports
"tests/**/*.py" = ["E501", "F401"]
# Migration files shouldn't be linted
"alembic/versions/*.py" = ["ALL"]

[tool.ruff.lint.isort]
# Import sorting configuration
known-first-party = ["api", "core", "repositories", "services"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
# Formatting style preferences
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

# ----------------------------------------------------------------------------
# MYPY - Static Type Checker
# ----------------------------------------------------------------------------
[tool.mypy]
# Python version and execution
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true

# Import handling
ignore_missing_imports = false
follow_imports = "normal"
namespace_packages = true

# Strictness settings
disallow_untyped_defs = false          # Allow functions without type hints (gradual typing)
disallow_any_unimported = false        # Allow 'Any' from untyped imports
disallow_untyped_calls = false         # Allow calling untyped functions
check_untyped_defs = true              # Check function bodies even without annotations
warn_redundant_casts = true            # Warn about unnecessary type casts
warn_unused_ignores = true             # Warn about unused '# type: ignore' comments
warn_unreachable = true                # Warn about unreachable code
strict_equality = true                 # Prohibit equality checks with incompatible types

# Error reporting
pretty = true
color_output = true
error_summary = true

# Cache configuration
cache_dir = ".mypy_cache"
incremental = true

# Per-module configuration for third-party packages without type stubs
[[tool.mypy.overrides]]
module = [
    "gradio.*",
    "pushover.*",
    "slowapi.*",
    "sklearn.*",
]
ignore_missing_imports = true

# ----------------------------------------------------------------------------
# COVERAGE.PY - Code Coverage Measurement
# ----------------------------------------------------------------------------
[tool.coverage.run]
# Execution settings
source = ["."]                      # Measure coverage for current directory
omit = [
    "*/tests/*",                    # Don't measure test files themselves
    "*/venv/*",                     # Exclude virtual environment
    "*/__pycache__/*",              # Exclude compiled files
    "*/alembic/versions/*",         # Exclude database migrations
    "app.py",                       # Exclude Gradio app entry point (optional)
]
branch = true                       # Measure branch coverage (if/else paths)
parallel = true                     # Support parallel test execution

[tool.coverage.report]
# Report generation settings
precision = 2                       # Show 2 decimal places (75.23%)
show_missing = true                 # Show line numbers of missing coverage
skip_covered = false                # Show all files, even 100% covered
sort = "-Cover"                     # Sort by coverage percentage (descending)

# Minimum coverage thresholds
fail_under = 70.0                   # Fail if total coverage below 70%

# Lines to exclude from coverage measurement
exclude_lines = [
    "pragma: no cover",             # Explicit exclusion marker
    "def __repr__",                 # Debug representations
    "def __str__",                  # String representations
    "raise AssertionError",         # Assertions (shouldn't happen)
    "raise NotImplementedError",    # Abstract methods
    "if __name__ == .__main__.:",   # Script entry points
    "if TYPE_CHECKING:",            # Type-checking only imports
    "@abstractmethod",              # Abstract method decorators
    "@overload",                    # Type hint overloads
]

[tool.coverage.html]
# HTML report settings
directory = "htmlcov"               # Output directory for HTML report
show_contexts = true                # Show which tests hit which lines

[tool.coverage.json]
# JSON report settings
output = "coverage.json"            # JSON output file
pretty_print = true                 # Format JSON nicely
